--- a/src/Components/list.css
+++ b/src/Components/list.css
@@ -1,8 +1,20 @@
 .list-container {
-  height: 375px;
+  height: 450px;
   width: 300px;
   text-align: center;
-  border: solid 1px black;
+  border: solid 1px whitesmoke;
+  border-radius: 30px;
+  padding: 50px;
+  margin-bottom: 80px;
+  transition: 1s;
+  line-height: 1.8;
+  font-family: "Raleway";
+  letter-spacing: 4px;
+}
+
+.list-container:hover {
+  padding: 30px;
+  border-radius: 50px;
 }
 
 .shown {
@@ -11,4 +23,62 @@
 
 .hidden {
   display: none;
+}
+
+.delete-button {
+  background-color: #0d0d0d;
+  color: white;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.delete-button:hover {
+  -webkit-animation: shake 0.8s infinite;
+  -moz-animation: shake 0.8s infinite;
+  -o-animation: shake 0.8s infinite;
+  animation: shake 0.8s infinite;
+  color: rgb(126, 0, 0);
+}
+@-webkit-keyframes shake {
+  from,
+  to {
+    transform: rotate(0deg);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: rotate(5deg);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: rotate(-5deg);
+  }
+}
+
+@keyframes shake {
+  from,
+  to {
+    transform: rotate(0deg);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: rotate(5deg);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: rotate(-5deg);
+  }
 }
