--- a/src/Components/navigation.css
+++ b/src/Components/navigation.css
@@ -1,23 +1,104 @@
 .nav-container {
-  height: 5vh;
-  border-bottom: solid 2px lightgray;
+  border-top: solid 0.1px white;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #0d0d0d;
 }
 
 .nav-list {
   text-decoration: none;
   list-style-type: none;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
 }
 
 .nav-button {
+  font-family: "Raleway";
+  letter-spacing: 2px;
   border-radius: 20px;
+  background-color: black;
   padding: 10px;
+  opacity: 0.7;
   transition: 0.5s;
+  color: #57d5fa;
 }
 
 .nav-button:hover {
-  background-color: gray;
+  opacity: 1;
+}
+
+.logo {
+  font-family: "Raleway";
+  letter-spacing: 10px;
+  font-size: 25px;
+  color: #57d5fa;
+}
+
+.hidden {
+  display: none;
+}
+
+.update-form {
+  display: block;
+  position: absolute;
+  top: 15vh;
+  height: 300px;
+  background-color: lightgray;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.update {
+  display: flex;
+  height: 40px;
+  align-items: center;
+  margin: 10px;
+  letter-spacing: 2px;
+}
+
+.add-form-button {
+  width: 80px;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: #0d0d0d;
   color: white;
+}
+
+.add-form-button:hover {
+  -webkit-animation: pulse 2s infinite;
+  -moz-animation: pulse 2s infinite;
+  -o-animation: pulse 2s infinite;
+  animation: pulse 2s infinite;
+  color: #57d5fa;
+}
+
+@keyframes pulse {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
+  50% {
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+/* FOR ANIMATIONS ON FORM INPUTS */
+.name-input,
+.star-input,
+.mass-input,
+.orbit-input {
+  transition: 1s;
+}
+
+.name-input:focus,
+.star-input:focus,
+.mass-input:focus,
+.orbit-input:focus {
+  padding: 5px;
 }
