--- a/src/Components/navigation.css
+++ b/src/Components/navigation.css
@@ -1,9 +1,12 @@
 .nav-container {
-  border-top: solid 0.1px white;
   position: sticky;
   top: 0;
   width: 100%;
   background-color: #0d0d0d;
+  height: 12vh;
+  display: flex;
+
+  align-items: center;
 }
 
 .nav-list {
@@ -11,7 +14,7 @@
   list-style-type: none;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  width: 100%;
 }
 
 .nav-button {
@@ -36,6 +39,10 @@
   color: #57d5fa;
 }
 
+.logo h1 {
+  margin: 0px;
+}
+
 .hidden {
   display: none;
 }
@@ -43,7 +50,7 @@
 .update-form {
   display: block;
   position: absolute;
-  top: 15vh;
+  top: 10vh;
   height: 300px;
   background-color: lightgray;
   border-radius: 10px;
